# strava-llm-exporter

./: .gitignore  README.md  export.md  pyproject.toml
docs/superpowers/plans/: 2026-03-29-oauth-flow.md  2026-03-29-strava-gpt-exporter.md
docs/superpowers/specs/: 2026-03-29-oauth-flow-design.md  2026-03-29-strava-gpt-exporter-design.md
strava_exporter/: auth.py  cli.py  client.py  filters.py  oauth.py
strava_exporter/formatters/: __init__.py  json_fmt.py  md_fmt.py
tests/: test_auth.py  test_cli_auth.py  test_client.py  test_filters.py  test_formatters.py  test_oauth.py
